# ZPR-Quantum-Tic-Tac-Toe

./: README.md
client-side-frontend/: README.md
client-side-frontend/src/components/: Board.jsx
client-side-frontend/src/stylesheets/: Game.scss
client-side-frontend/src/views/: Game.js  Game.jsx  Start.jsx
server-side-backend/: CMakeLists.txt  README.md
server-side-backend/headers/API/: CreateGameResourceFactory.hpp  MakeMoveResourceFactory.hpp
server-side-backend/headers/Application/: Board.hpp  Entanglement.hpp  Game.hpp  GameStatus.hpp  GamesContainer.hpp  Result.hpp  Sign.hpp  Status.hpp  Tile.hpp
server-side-backend/source/: main.cpp
server-side-backend/source/API/: CreateGameResourceFactory.cpp  GameResourceFactory.cpp  MakeMoveResourceFactory.cpp
server-side-backend/source/Application/: Board.cpp  Entanglement.cpp  Game.cpp  GamesContainer.cpp  Tile.cpp
server-side-backend/tests/: all_tests.cpp
